# Factoryops-Complete

./: .gitignore  PROJECT_CONTEXT.md  docker-compose.yml
copilot/: Dockerfile  README.md  bootstrap.py  config.yaml  core.py  main.py  requirements.txt
services/analytics-service/: .env.example  .gitignore  .project_structure  README.md  alembic.ini  pyproject.toml
services/analytics-service/alembic/: env.py
services/analytics-service/alembic/versions/: 0a4b1b7b5c46_add_server_defaults_for_analytics_.py  d74fc8909d3e_make_analytics_timestamps_timezone_aware.py
services/analytics-service/src/: main.py
services/analytics-service/src/api/: dependencies.py
services/analytics-service/src/api/routes/: analytics.py  health.py
services/analytics-service/src/config/: logging_config.py  settings.py
services/analytics-service/src/infrastructure/: database.py  postgres_repository.py  s3_client.py
services/analytics-service/src/models/: database.py  schemas.py
services/analytics-service/src/services/: dataset_service.py  job_runner.py  model_registry.py  result_repository.py
services/analytics-service/src/services/analytics/: anomaly_detection.py  base.py  failure_prediction.py  feature_engineering.py  forecasting.py
services/analytics-service/src/utils/: exceptions.py  serializers.py  validators.py
services/analytics-service/src/workers/: job_queue.py  job_worker.py
services/analytics-service/tests/: conftest.py
services/analytics-service/tests/integration/: test_api.py
services/analytics-service/tests/unit/: test_analytics.py  test_job_runner.py
(+153 files in other folders)
